@@ -6,6 +6,7 @@
 <ul>
 <li>Prevent an infinite redirect loop. This was happening with http://feeds.feedburner.com/factcheck/Rdqt</li>
 <li>Fix the article view scrolling problem reported at http://forums.cocoaforge.com/viewtopic.php?f=18&amp;t=20814</li>
+<li>Fix the mark all read bug on Snow Leopard reported at http://forums.cocoaforge.com/viewtopic.php?f=18&amp;t=20877</li>
 </ul>
 </body>
 </html>
